# mprpc

./: CMakeLists.txt  README.md  autobuild.sh
example/: friend.pb.cc  friend.pb.h  friend.proto  user.proto
example/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
example/caller/: CMakeLists.txt  callfriendservice.cc  calluserservice.cc
log/: 2113-8-10-log.txt  2113-8-11-log.txt
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  rpcheader.proto  rpcprovider.cc  zookeeperutil.cc
src/include/: lockqueue.h  logger.h  mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  mprpccontroller.h  rpcprovider.h  zookeeperutil.h
test/: main  main.cc
test/protobuf/: a.out  main.cc  test.pb.cc  test.pb.h  test.proto
